# Enterprise-AI-Core

./: Dockerfile  README.md  docker-compose.yml  metadata.json  pyproject.toml  server.ts
.github/workflows/: ci.yml
docs/: Architecture.md  Compliance.md  ContextEngine.md  ConversationContext.md  FlowDiagrams.md  Governance.md  Guardrails.md  MemoryIntegration.md  ModelRouting.md  Module_Agent.md  Module_Diagnostics_Eval.md  Module_Extension_SDK_Lifecycle.md  Module_LLM.md  Module_Memory_Cache.md  Module_Messaging_GRPC.md  Module_RAG.md  Module_Resiliency_Routing.md  Module_Tools_MCP.md  PIIProtection.md  PromptBestPractices.md  PromptInjection.md  PromptManagement.md  PromptTemplates.md  SecurityPolicies.md  SystemArchitecture.md  SystemContext.md  TokenManagement.md  ToolSecurity.md
enterprise_ai_core/: __init__.py  cli.py
enterprise_ai_core/agent/: agent.py  builder.py  planner.py  state.py
enterprise_ai_core/cache/: interfaces.py  memory_cache.py
enterprise_ai_core/chat/: engine.py
enterprise_ai_core/common/: context.py  di.py  exceptions.py  result.py
enterprise_ai_core/configuration/: interfaces.py  manager.py
enterprise_ai_core/context/: __init__.py  engine.py  interfaces.py  middleware.py  models.py  providers.py  templates.py  token_budget.py
enterprise_ai_core/diagnostics/: engine.py
prompts/: assistant.md  code_generator.md  memory.md  planner.md  rag.md  reflection.md  reviewer.md  safety.md  summarizer.md  system.md  tool_selector.md
src/: App.tsx  types.ts
tests/: test_agent.py  test_enterprise_features.py  test_guardrails.py
(+71 files in other folders)
